Fix horizontal scrolling in paint

--- a/exhibition/django_jigsaw_puzzle/static/django_jigsaw_puzzle/css/paint_game.css
+++ b/exhibition/django_jigsaw_puzzle/static/django_jigsaw_puzzle/css/paint_game.css
@@ -1,5 +1,6 @@
 canvas {
     cursor: crosshair;
+    display: block;
 }
 
 .gizmos {
